WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158483
The backdrop-filter property does not respect border-radius
https://bugs.webkit.org/show_bug.cgi?id=158483
Summary
The backdrop-filter property does not respect border-radius
Antoine Quint
Reported
2016-06-07 10:31:00 PDT
<
rdar://problem/24210257
>
Attachments
Testcase
(600 bytes, text/html)
2016-06-07 10:33 PDT
,
Antoine Quint
no flags
Details
Patch
(40.66 KB, patch)
2016-06-07 16:47 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Patch
(30.28 KB, patch)
2016-06-07 17:58 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Patch for landing
(36.78 KB, patch)
2016-06-07 18:34 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2016-06-07 10:33:50 PDT
Created
attachment 280720
[details]
Testcase
Antoine Quint
Comment 2
2016-06-07 16:47:59 PDT
Created
attachment 280747
[details]
Patch
Simon Fraser (smfr)
Comment 3
2016-06-07 17:04:45 PDT
Comment on
attachment 280747
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=280747&action=review
Code looks good but please use ref tests.
> Source/WebCore/platform/graphics/GraphicsLayer.h:381 > + FloatRoundedRect backdropFiltersRect() const { return m_backdropFiltersRect; }
Return a const ref. These things are big.
Antoine Quint
Comment 4
2016-06-07 17:58:30 PDT
Created
attachment 280752
[details]
Patch
Simon Fraser (smfr)
Comment 5
2016-06-07 18:05:04 PDT
Comment on
attachment 280752
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=280752&action=review
> Source/WebCore/rendering/RenderLayerBacking.cpp:435 > + LayoutRect boxRect = renderer.borderBoxRect();
Odd to fetch boxRect again, and alias the variable. Better to use renderer().style().hasBorderRadius()
> LayoutTests/css3/filters/backdrop/backdrop-filter-with-border-radius-and-reflection-expected.html:2 > + <meta name="viewport" content="width=device-width">
Pretty sure this does nothing in tests (unless you opt in to viewport stuff).
Antoine Quint
Comment 6
2016-06-07 18:34:44 PDT
Created
attachment 280759
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2016-06-07 19:06:07 PDT
Comment on
attachment 280759
[details]
Patch for landing Clearing flags on attachment: 280759 Committed
r201785
: <
http://trac.webkit.org/changeset/201785
>
WebKit Commit Bot
Comment 8
2016-06-07 19:06:11 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 9
2016-06-08 11:21:58 PDT
This change appears to have caused LayoutTest css3/filters/backdrop/dynamic-backdrop-filter-change.html to become much more flaky on Mac
http://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=css3%2Ffilters%2Fbackdrop%2Fdynamic-backdrop-filter-change.html
Antoine Quint
Comment 10
2016-06-15 18:30:36 PDT
***
Bug 158807
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug